# ani

./: .gitignore  .gitmodules  .tool-versions  CMakeLists.txt  Makefile  README.md  ani_build_plan.md  ani_postlaunch_plan.md  ani_web_build_plan.md  ani_webapp_buildplan.md
include/ani/: cache.h  cli.h  fs.h  http.h  json.h  log.h  models.h  output.h  str.h  time.h  version.h
include/ani/providers/: anilist.h  jikan.h  mangadex.h
src/: CMakeLists.txt  main.c
src/cli/: args.c  output.c
src/core/: cache.c
src/json/: json_wrap.c
src/models/: model.c
src/net/: http.c
src/providers/: anilist.c  jikan.c  mangadex.c
src/util/: fs.c  log.c  str.c  time.c  version.c
tests/: CMakeLists.txt
